fix: nav buttons scroll. Now it shifts with the header heigth. Add: monochrom filter to the header on scroll

--- a/responsive_style.css
+++ b/responsive_style.css
@@ -76,6 +76,8 @@ header {
     justify-content: space-between;
     position: sticky;
     top: 0;
+    filter: grayscale(0);
+    transition: filter 3s ease;
 }
 
 header::before {
